--- a/src/components/UserItem/userItem.module.css
+++ b/src/components/UserItem/userItem.module.css
@@ -9,3 +9,9 @@
     justify-content: space-between;
     padding: 0 50px;
 }
+
+.imgAvatar {
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+}
