--- a/src/components/Users/usersCont.module.css
+++ b/src/components/Users/usersCont.module.css
@@ -1,6 +1,9 @@
 .container {
     width: 100%;
     height: 100%;    
-    overflow:scroll;
-    
+    overflow-y: scroll;   
+}
+
+.container::-webkit-scrollbar {
+    width: 0;
 }
