--- a/src/components/UserItem/userItem.module.css
+++ b/src/components/UserItem/userItem.module.css
@@ -15,3 +15,17 @@
     width: 80px;
     height: 80px;
 }
+
+.iconContainer {
+    /* border: 1px solid black; */
+    color: gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.iconContainer:hover {
+    color: black;
+}
