--- a/src/components/Success/success.module.css
+++ b/src/components/Success/success.module.css
@@ -17,9 +17,31 @@
 }
 
 .successContainer {
-    padding: 20px;
+    padding: 40px;
     border-radius: 12px;
     background-color: white;
-    height: 200px;
-    width: 400px;
+    height: 300px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    color: rgb(129, 216, 0); 
+}
+
+.successImg {
+    height: 70px;
+    width: 70px;
+}
+
+.btnOK {
+    font-size: 20px;
+    font-weight: 900;
+    border: none;
+    background-color: rgb(129, 216, 0); 
+    color: white;
+    width: 100px;
+    height: 60px;
+    border-radius: 30px;
+    cursor: pointer;
 }
